update deprecated github action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,31 +30,18 @@ jobs:
           echo "Commit: ${GITHUB_SHA}" >> version.txt
           
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
+          name: Release ${{ steps.version.outputs.tag }}
           body: |
-            ## Changes in ${{ github.ref_name }}
+            ## Changes in ${{ steps.version.outputs.tag }}
             
             Automatically created release for version ${{ steps.version.outputs.version }}
             
             ### Build Information
             - Version: ${{ steps.version.outputs.version }}
             - Commit: ${{ github.sha }}
-            - Build Date: ${{ github.event.head_commit.timestamp }}
+            - Build Date: $(date)
+          files: version.txt
           draft: false
           prerelease: false
-          
-      - name: Upload version file
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./version.txt
-          asset_name: version.txt
-          asset_content_type: text/plain
